--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Simba</string>
     <string name="category_name">Category Name</string>
+    <string name="Category">Категорії</string>
+    <string name="main_activity">Main Activity</string>
+    <string name="category_activity">Category Activity</string>
 </resources>
